# bodhi-assistant

./: .gitignore  bodhicast-api-schema.d.ts  docker-compose.override.yml  docker-compose.yml
backend/: backend.dockerfile  package-lock.json  package.json
backend/src/: app.module.ts  config.ts  main.ts
backend/src/agent/: agent.controller.ts  agent.module.ts  agent.service.ts
backend/src/bodhicast-proxy/: bodhicast-proxy.controller.spec.ts  bodhicast-proxy.controller.ts  bodhicast-proxy.module.ts  bodhicast-proxy.service.spec.ts  bodhicast-proxy.service.ts
backend/src/common/dto/: bodhicast-api.dto.ts
backend/src/common/interfaces/: bodhicast-api.interface.ts
backend/src/utils/: utils.ts
nbs/: 240618_ts_refresh.ipynb  240618_ts_refresh_jup.ipynb  240619_bohdi_api_interface.ipynb  240622_weaviate.ipynb  240627_deno_remote_kernel.ipynb  240627_scratchpad.ipynb  240629_etl_for_nn.ipynb  bodhicastTypes.d.ts  notes.ipynb
nbs/.ipynb_checkpoints/: 240618_ts_refresh_jup-checkpoint.ipynb  notes-checkpoint.ipynb
nbs/python/: 240624_claude_api_fetch.ipynb  240624_claudette.ipynb  240624_multi_tool.ipynb  240628_contest_haiku_many_shot.ipynb  240628_haiku_many_shot.ipynb  pyproject.toml
sql/: raw_sql_func.sql
utils/: openapi_to_ts_schema.sh
